fix home overflow

--- a/src/app/feature/home/home-buttons/home-buttons.component.scss
+++ b/src/app/feature/home/home-buttons/home-buttons.component.scss
@@ -1,55 +1,55 @@
 .container {
-    position: absolute;
-    width: 100vw;
-    height: 100%;
-    overflow: hidden;
+  position: absolute;
+  width: 100vw;
+  height: 100%;
+  overflow: auto;
 }
 
 .menu-button {
-    width: 100%;
-    height: 80px;
-    border-radius: 16px;
-    background-color: var(--ion-color-primary, #5550A9);
-    margin: 20px;
-    max-width: 400px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 20px;
-    padding-top: 24px;
-    padding-bottom: 24px;
-    color: white;
-    font-size: 24px;
-    box-shadow: rgba(0, 0, 0, 0.6) 1px 1px 6px 0px;
+  width: 100%;
+  height: 80px;
+  border-radius: 16px;
+  background-color: var(--ion-color-primary, #5550a9);
+  margin: 20px;
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  color: white;
+  font-size: 24px;
+  box-shadow: rgba(0, 0, 0, 0.6) 1px 1px 6px 0px;
 
-    &.guide {
-        background-color: var(--theme-var-guideButton, #F8AF00);
-    }
+  &.guide {
+    background-color: var(--theme-var-guideButton, #f8af00);
+  }
 
-    &.chat {
-        background-color: var(--theme-var-chatButton, #29A327);
-    }
+  &.chat {
+    background-color: var(--theme-var-chatButton, #29a327);
+  }
 
-    &.toolbox {
-        background-color: var(--theme-var-toolboxButton ,#5550A9);
-    }
+  &.toolbox {
+    background-color: var(--theme-var-toolboxButton, #5550a9);
+  }
 
-    &.activities {
-        background-color: var(--theme-var-activitiesButton, #5FC4D2);
-    }
+  &.activities {
+    background-color: var(--theme-var-activitiesButton, #5fc4d2);
+  }
 
-    &.gallery {
-        background-color: var(--theme-var-galleryButton, #dc8900);
-    }
+  &.gallery {
+    background-color: var(--theme-var-galleryButton, #dc8900);
+  }
 
-    &.reminders {
-        background-color: var(--theme-var-remindersButton, #E81C51);
-    }
+  &.reminders {
+    background-color: var(--theme-var-remindersButton, #e81c51);
+  }
 }
 
 @media only screen and (max-width: 440px) {
-    .menu-button {
-        width: calc(100% - 40px);
-        margin-left: 20px;
-        margin-right: 20px;
-    }
+  .menu-button {
+    width: calc(100% - 40px);
+    margin-left: 20px;
+    margin-right: 20px;
+  }
 }
